# WordleSolver

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.1329F3CFB310A88F.idx  pattern.cpp.B4CD27445B76D358.idx  pattern.h.556133583FB28FE4.idx  solver.cpp.E1F4EC7E33E9646D.idx  solver.h.7E57039923734A74.idx
data/: candidate-set-indices.txt  order-sets.py
include/: pattern.h  solver.h
src/: main.cpp  pattern.cpp  solver.cpp
